--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,13 @@ plainwhite:
   date_format: "%b %-d, %Y"
   # sitemap: true # set to true to generate sitemap.xml content
   disqus_shortname: none-da
-
+  dark_mode: true
+  portfolio_image: "assets/portfolio.jpg" # the path from the base directory of the site to the image to display (no / at the start)
+  html_lang: "en" # set the lang attribute of the <html> tag for the pages. See here for a list of codes: https://www.w3schools.com/tags/ref_country_codes.asp
+  condensed_mobile:
+    #- home
+    - page
+    - post
   # generate social links in footer
   social_links:
     twitter: none_daa
@@ -28,6 +34,7 @@ plainwhite:
 # - about.md
 
 # Build settings
+theme: plainwhite
 
 plugins:
   - jekyll-seo-tag
