--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ plainwhite:
 # - about.md
 
 # Build settings
-remote_theme: plainwhite
+remote_theme: samarsault/plainwhite-jekyll
 
 plugins:
   - jekyll-seo-tag
