Update twitter handle

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ plainwhite:
     - post
   # generate social links in footer
   social_links:
-    twitter: none_daa
+    twitter: nanda_ki_shor
     github:  none-da
     linkedIn: in/none-da
     rss: rss
