--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ plainwhite:
   # generate social links in footer
   social_links:
     twitter: nanda_ki_shor
-    github:  none-da
-    linkedIn: in/none-da
+    github:  nanda-ki-shor
+    linkedIn: in/nanda-ki-shor
     rss: rss
 
 # If you want to link only specific pages in your header, uncomment
